Fix footer scene z-indexing

--- a/src/styles/components/scenes/AboutSceneSection.module.scss
+++ b/src/styles/components/scenes/AboutSceneSection.module.scss
@@ -38,7 +38,7 @@
     width: 100%;
     gap: min(8.5rem, 7vw);
     padding-bottom: 5rem;
-    z-index: 10;
+    z-index: 20;
 
     .container {
         display: flex;
